2007-11-26  Marcus Brinkmann  <marcus@g10code.de>

	* src/Makefile.am (msi, gpg4win-$(VERSION).wix,
	(gpg4win-light-$(VERSION).wix): New targets.
	* src/make-msi.pl: Rewritten.
	* src/make-msi.guids: Include missing files.
	* src/inst-gpg4win.nsi: Give section an identifier.
	* src/README-msi.txt: Update.
	* src/gpg4win.nsi: Do not include pinentry in the light installer.
	* doc/README.de.txt, doc/README.en.txt: Document MSI package.
	* src/make-msi.bat: Support other languages and light installer.

2007-11-23  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update gpgme to 1.1.6-svn1279.

2007-11-23  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update kleopatra to version 20071122.

2007-11-16  Marcus Brinkmann  <marcus@g10code.de>

	* src/make-msi.guids: Include manual files.
	* src/make-msi.pl: Support manuals, and prefix output file names
	by src, because manuals are within gpg4win.

2007-11-15  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-kleopatra.nsi: Use SRCDIR to find kleopatra.bat.
	* src/inst-qt.nsi: Use SRCDIR to find qt.conf and BUILD_DIR to
	find mingwm10.dll.
	* src/make-msi.guids: Add these files.
	* src/make-msi.pl (dump_all): Do not try to start the service yet.
	(collect_all): Support SRCDIR in File.
	* src/uninst-regex.nsi: Uninstall regex.dll.

	* src/inst-sections.nsi (CalcDepends): Add dependency for
	libetpan.
	* src/make-msi.guids: Add libetpan and claws.

	* Makefile.am (EXTRA_DIST): Add these patches.
	* packages/packages.current: Update claws mail.  Download
	regex-bin package.
	* patches/claws-mail-3.0.2/01-w32-logo.patch,
	patches/claws-mail-3.0.2/02-w32-icon.patch,
	patches/claws-mail-3.0.2/03-smime-plugin.patch,
	patches/claws-mail-3.0.2/04-gettimeofday.patch,
	patches/claws-mail-3.0.2/99-auto.patch: New files.
	* configure.ac: Make regex a GNUWIN32 package.
	* src/inst-regex.nsi: Install regex.dll.
	* src/Makefile.am: Do not delete regex shared library.
